ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/BreakStatements/parser_breakNotInIterationOrSwitchStatement1/input.ts.stderr
error: A 'break' statement can only be used within an enclosing iteration or switch statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/BreakStatements/parser_breakNotInIterationOrSwitchStatement1/input.ts:1:1
  |
1 | break;
  | ^^^^^^

